--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,20 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: cornsilk;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.para{
+  font-size: large;
+  font-weight: bold;
+  padding: 2rem;
+}
+
+.footer{
+  background-color: black;
+  opacity: 0.9;
+  height: 20vh;
+  text-align: center;
+  padding: 30px 0;
 }
