--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,22 @@ body {
 }
 
 
+
+.icons .fa{
+  padding: 1rem;
+}
+.search{
+  margin: .5rem 0;
+}
+
+.hov:hover{
+  padding: 1rem;
+  transition: 1000ms;
+}
+
+
+
+
 .para{
   font-size: large;
   font-weight: bold;
@@ -18,7 +34,30 @@ body {
 .footer{
   background-color: black;
   opacity: 0.9;
-  height: 20vh;
+ width: 100vw;
   text-align: center;
   padding: 30px 0;
+}
+
+
+@media (max-width: 400px) { 
+ 
+
+  
+ 
+ .nav{
+   font-size: 0.8rem;
+ }
+  .title{
+    font-size: 1rem;
+  }
+  section{
+    display: flex;
+    flex-direction: column;
+  }
+  .caro{
+    display: none;
+  }
+
+  
 }
