--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,7 @@ body {
 
 
 
-.icons .fa{
-  padding: 1rem;
-}
+/*nav and navbar*/
 .search{
   margin: .5rem 0;
 }
@@ -22,42 +20,88 @@ body {
   transition: 1000ms;
 }
 
+/*main body*/
 
-
-
-.para{
-  font-size: large;
-  font-weight: bold;
+.bot{
   padding: 2rem;
 }
+.main{
+  padding: 1.5rem 1.5rem;
+}
+
+.para{
+    font-size: 1rem;
+    font-weight: normal;
+    padding: .5rem;
+    font-family:'Helvetica Neue', sans-serif ;
+  }
+
+  /*footer and icons*/
+  .icons .fa{
+    padding: 1rem;
+  }
+  
+  .icons.tex{
+    font-size: .5rem;
+  }
 
 .footer{
   background-color: black;
   opacity: 0.9;
- width: 100vw;
   text-align: center;
-  padding: 30px 0;
+  padding: 10px 0;
 }
 
 
 @media (max-width: 400px) { 
  
 
-  
+  .icons .fa{
+    padding: .4rem;
+  }
+  .search{
+    margin: .2rem 0;
+    width: 50%;
+  }
  
  .nav{
    font-size: 0.8rem;
+   display: flex;
+   flex-direction: column;
  }
+
+ .logo{
+   width: 8rem;
+   height: 3rem;
+ }
+ 
+  .head{
+    font-size: 1rem;
+  }
   .title{
     font-size: 1rem;
+  }
+  .para{
+    font-size: 1rem;
+    font-weight: normal;
+    padding: .5rem;
+    font-family:'Helvetica Neue', sans-serif ;
   }
   section{
     display: flex;
     flex-direction: column;
   }
-  .caro{
-    display: none;
+  .tex{
+    font-size: 1rem;
   }
 
+  .footer {
+    background-color: black;
+    opacity: 0.9;
+    text-align: center;
+    font-size: .5rem;
+    padding: .5rem 0;
+  } 
   
 }
+
