--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: cornsilk;
+  background-color: grey;
 }
 
 
@@ -19,6 +19,7 @@ body {
   padding: 1rem;
   transition: 1000ms;
 }
+
 
 /*main body*/
 
@@ -50,6 +51,7 @@ body {
   opacity: 0.9;
   text-align: center;
   padding: 10px 0;
+  height: 16rem;
 }
 
 
@@ -68,7 +70,39 @@ body {
    font-size: 0.8rem;
    display: flex;
    flex-direction: column;
+   
  }
+ /*Nav button and close icon*/
+.bar{
+  cursor: pointer;
+  animation-name: pulse;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+.close{
+  font-size: 1rem;
+}
+
+ .nav {
+  height: 50%;
+  background: black;
+  opacity: 0.8;
+box-shadow: 1px 0px 7px rgba(0, 0, 0, 0.5);
+position: fixed;
+padding-top: 0;
+top: 10%;
+left: 0;
+width: 35%;
+max-width: 400px;
+z-index: 200;
+transform: translateX(-100);
+transition: transform 2s linear;
+
+}
+
+
+
+
 
  .logo{
    width: 8rem;
@@ -101,6 +135,7 @@ body {
     text-align: center;
     font-size: .5rem;
     padding: .5rem 0;
+    height: 10rem;
   } 
   
 }
