--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
 
 .hov:hover{
   padding: 1rem;
-  transition: 1000ms;
+  transition: 500ms;
 }
 
 
@@ -53,6 +53,10 @@ body {
   padding: 10px 0;
   height: 16rem;
 }
+
+
+/*contact page*/
+
 
 
 @media (max-width: 400px) { 
@@ -127,7 +131,18 @@ transition: transform 2s linear;
   }
   .tex{
     font-size: 1rem;
+ }
+
+  /*contact page*/
+  .icon2{
+    font-size: .4rem;
   }
+
+  .contact{
+    font-size: 1rem;
+  }
+
+  /*end of contact mediaquery*/
 
   .footer {
     background-color: black;
