--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ body {
 }
 
 .car{
-  height: 23rem;
+  height: auto;
   width: auto;
 }
 
@@ -47,7 +47,7 @@ body {
 }
 
 .para{
-    font-size: 2rem;
+    font-size: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
