--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,12 @@ body {
   transition: 500ms;
 }
 
+/*form*/
+
+label{
+  margin: 1rem;
+}
+
 
 /*main body*/
 
@@ -35,10 +41,10 @@ body {
   width: auto;
 }
 
-.section{
+section{
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  
+
 }
 
 .note{
@@ -76,7 +82,22 @@ body {
 
 /*contact page*/
 
+/*bloglist*/
 
+.bloglist{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+ 
+  
+}
+
+.author-image{
+  border-radius: 40px;
+  display: flex;
+  justify-content: space-evenly;
+  margin: 20px;
+}
 
 @media (max-width: 400px) { 
  
@@ -124,7 +145,9 @@ transition: transform 2s linear;
 }
 
 
-
+img{
+  width: 200px;
+}
 
 
  .logo{
