created components for single blog,blog videos,and comments,and connected the comments component to the api in node

--- a/src/index.css
+++ b/src/index.css
@@ -86,7 +86,7 @@ section{
 
 .bloglist{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
  
   
